--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.7.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "material-design-icons": "^3.0.1"
   }
 }
